# BeSafeBox_Android_app

./: README.md  build.gradle
mobile/: CMakeLists.txt  build.gradle  proguard-rules.pro
mobile/src/androidTest/java/motionapps/besafebox/: HelperClasses.java  InstrumentedTest.java
mobile/src/main/: AndroidManifest.xml
mobile/src/main/cpp/: NativeModel.cpp  NativeModel.h  native-lib.cpp
mobile/src/main/cpp/calculations/: Calculations.cpp  Calculations.h  Classifier.cpp  Classifier.h
mobile/src/main/cpp/calculations/nn/: KerasSequentialModel.cpp  KerasSequentialModel.h  Parameters.cpp  Parameters.h
mobile/src/main/cpp/datatypes/: DataCarrier.cpp  DataCarrier.h  SensorOutput.cpp  SensorOutput.h
mobile/src/main/java/motionapps/besafebox/activities/: About.java  Alarm.java
mobile/src/main/java/motionapps/besafebox/gps/: GPSCallback.java  GPSParameters.java
mobile/src/main/java/motionapps/besafebox/model_managers/: BatteryOptimizer.java  ModelManager.java
mobile/src/main/java/motionapps/besafebox/notifications/: Alerts.java  Notify.java
mobile/src/main/res/anim/: fade_in.xml  fade_out.xml
mobile/src/main/res/drawable/: ic_accuracy.xml  ic_android.xml  ic_baseline_gps.xml  ic_cross.xml  ic_emergency.xml  ic_fall.xml  ic_fall_white.xml  ic_happy_face.xml  ic_moon.xml  ic_no_location.xml  ic_ringing.xml  ic_sad_face.xml  ic_science_icon.xml  ic_sms.xml  ic_warning_white.xml  ic_web.xml  main_start_button.xml  main_stop_button.xml  main_wait_button.xml  rounded_black.xml  rounded_gray.xml  view_divider.xml  warning.xml  warning_white.xml
mobile/src/main/res/layout/: activity_alarm.xml  activity_custom_number.xml  activity_main.xml  fragment_contact.xml  pref_preference.xml  pref_screen.xml  settings_activity.xml
mobile/src/main/res/raw/: notices.xml
mobile/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
mobile/src/main/res/xml/: root_preferences.xml
(+35 files in other folders)
